--- a/project/retraction_analysis/analysis/wakefield_retraction/draft.ipynb
+++ b/project/retraction_analysis/analysis/wakefield_retraction/draft.ipynb
@@ -121,6 +121,34 @@
    "source": [
     "write_list(final, \"coci_sources_extended.csv\", header= False)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Write sources on csv\n",
+    "all_sources = []\n",
+    "for k,v in SOURCES_BY_YEAR.items():\n",
+    "    for item in v: \n",
+    "        all_sources.append({\"year\": k, \"source_title\": item[0], \"source_id\": item[1]})\n",
+    "write_list(all_sources, \"coci_sources.csv\", header= False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "READY_TO_CSV = []\n",
+    "for k,v in SUBJECTS.items():\n",
+    "    for k_area in v:\n",
+    "        READY_TO_CSV.append({\"subject\":k,\"area\":k_area,\"count\":v[k_area]})\n",
+    "\n",
+    "write_list(READY_TO_CSV, \"sources_test.csv\", header= False)"
+   ]
   }
  ],
  "metadata": {
