--- a/project/retraction_analysis/analysis/wakefield_retraction/nb.ipynb
+++ b/project/retraction_analysis/analysis/wakefield_retraction/nb.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 210,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 211,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 277,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,7 +79,9 @@
     "csv_2005_2010 = \"csv/2005_2010.csv\"\n",
     "csv_2011_2017 = \"csv/2011_2017.csv\"\n",
     "coci_cits = \"csv/coci_cits.csv\"\n",
-    "coci_sources = \"csv/coci_sources.csv\""
+    "coci_sources = \"csv/coci_sources.csv\"\n",
+    "coci_sources_isbn = \"csv/isbn/isbn_cat_lcc.csv\"\n",
+    "lcc_scimago_map = \"csv/lcc_scimago_subject.csv\""
    ]
   },
   {
@@ -91,10 +93,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 284,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [],
    "source": [
+    "def norm_isbn_code(x):\n",
+    "    regex = r\"^([A-Z]{1,})\\d\"\n",
+    "    matches = re.finditer(regex, x, re.MULTILINE)\n",
+    "    for matchNum, match in enumerate(matches, start=1):\n",
+    "        if match:\n",
+    "            return match.groups()[0]\n",
+    "        \n",
     "def norm_pdftext(t):\n",
     "    t = re.sub(r\"(\\w{1})\\-\\s(\\w{1})\", r\"\\1\\2\", t)\n",
     "    return t\n",
@@ -183,13 +192,21 @@
     "            norm_val[i][p] = part_val.rstrip().lstrip().lower()\n",
     "    return norm_val\n",
     "\n",
-    "def norm_source_dois(x):\n",
+    "def norm_source_id(x):\n",
+    "    def filter_null(x):\n",
+    "        return x[0] != \"\"\n",
+    "    \n",
+    "    x = x.rstrip().lstrip()\n",
+    "    norm_val = [item.rstrip().lstrip().lower() for item in x.split(\";\")]\n",
+    "    norm_val = [tuple(item.split(\":\")) for item in norm_val]\n",
+    "    norm_val = list(filter(filter_null, norm_val))\n",
+    "    return norm_val\n",
+    "\n",
+    "def norm_dois(x):\n",
     "    x = x.rstrip().lstrip()\n",
     "    norm_val = [item.rstrip().lstrip().lower() for item in x.split(\"[[;;]]\")]\n",
     "    norm_val = list(filter(None, norm_val))\n",
-    "    return norm_val\n",
-    "\n",
-    "        "
+    "    return norm_val\n"
    ]
   },
   {
@@ -208,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 214,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -277,12 +294,110 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 2) Citing articles Sources"
+    "### 2) All Citing sources"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2.1) ISBNs Citations (update the sources dataset)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 301,
+   "execution_count": 81,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "SUBJECTS_ISBN = defaultdict(str)\n",
+    "LCC_SCIMAGO_MAP = defaultdict(str)\n",
+    "with open(coci_sources_isbn) as a_file:\n",
+    "    #0. ISBN\n",
+    "    #1. CODE\n",
+    "    csv_reader = csv.reader(a_file, delimiter=',') \n",
+    "    for row in csv_reader:\n",
+    "        SUBJECTS_ISBN[row[0]] = row[1]\n",
+    "        \n",
+    "with open(lcc_scimago_map) as a_file:\n",
+    "    #0. LCC Code\n",
+    "    #1. SCIMAGO Subject\n",
+    "    csv_reader = csv.reader(a_file, delimiter=',') \n",
+    "    for row in csv_reader:\n",
+    "        LCC_SCIMAGO_MAP[row[0]] = row[1]\n",
+    "\n",
+    "# The Sources ISBN\n",
+    "MY_ISBN_LIST = [[\"9780230282889\",\"9780230369078\"],[\"9780333922637\",\"9780230213999\"],[\"9780470710470\",\"9780470745328\"],[\"9780470918449\",\"9780470381120\"],[\"9780470939345\",\"9780471716969\"],[\"9780470939390\",\"9780471237372\"],[\"9780470939406\",\"9780471237389\"],[\"9780470976739\",\"9780470694671\"],[\"9780824705107\",\"9781420002515\"],[\"9780824707156\",\"9780824755164\"],[\"9780824750619\",\"9780203026229\"],[\"9781118404898\",\"9780470029718\"],[\"9781118517000\",\"9780470745915\"],[\"9781118543504\",\"9780470654675\"],[\"9781118683484\",\"9781119940418\"],[\"9781118688489\",\"9780813806143\"],[\"9781118753378\",\"9781118845479\"],[\"9781118858080\",\"9781118128336\"],[\"9781118898345\",\"9781118898390\"],[\"9781119164746\",\"9781119164777\"],[\"9781119426981\",\"9781118586624\"],[\"9781119943280\",\"9780470667347\"],[\"9781119959946\",\"9780470654750\"],[\"9781349318230\",\"9781137023001\"],[\"9781420060737\",\"9781420060744\"],[\"9781420068818\",\"9781420068870\"],[\"9781439804797\",\"9781439804827\"],[\"9781439813430\",\"9781439813447\"],[\"9781439838839\",\"9781439838846\"],[\"9781444325461\",\"9781405186544\"],[\"9781444355666\",\"9781444337082\"],[\"9781466567207\",\"9781466567238\"],[\"9781841845203\",\"9780203007648\"],[\"9781848550803\",\"9781848550810\"],[\"9783319159485\",\"9783319159492\"],[\"9783319180953\",\"9783319180960\"],[\"9783319283241\",\"9783319283265\"],[\"9783319309231\",\"9783319309255\"],[\"9783319311432\",\"9783319311432\"],[\"9783319418988\",\"9783319418995\"],[\"9783319432663\",\"9783319432687\"],[\"9783319599502\",\"9783319599526\"],[\"9783319625416\",\"9783319625430\"],[\"9783319638225\",\"9783319638232\"],[\"9783319652641\",\"9783319652665\"],[\"9783319669380\",\"9783319669397\"],[\"9783319693491\",\"9783319693507\"],[\"9783662495032\",\"9783662495049\"],[\"9783662547984\",\"9783662547991\"]]\n",
+    "MY_ISBN_LCC = defaultdict(str)\n",
+    "for a_book in MY_ISBN_LIST:\n",
+    "    sub_val = \"none\"\n",
+    "    for i_isbn in range(0,2):\n",
+    "        if a_book[i_isbn] in SUBJECTS_ISBN: \n",
+    "                sub_val = SUBJECTS_ISBN[a_book[i_isbn]]\n",
+    "                break\n",
+    "    MY_ISBN_LCC[tuple(a_book)] = sub_val\n",
+    "# Others manually retrieved from https://catalog.loc.gov\n",
+    "MY_ISBN_LCC[(\"9781420068818\",\"9781420068870\")] = \"RC553.A88\"\n",
+    "\n",
+    "for isbn,code in MY_ISBN_LCC.items():\n",
+    "    if code != \"none\":\n",
+    "        if code in LCC_SCIMAGO_MAP:\n",
+    "            sub_val = LCC_SCIMAGO_MAP[code]\n",
+    "        else:\n",
+    "            sub_val = LCC_SCIMAGO_MAP[norm_isbn_code(code)]\n",
+    "            father_code = norm_isbn_code(code)[0:-1]\n",
+    "            while sub_val == \"\" and len(father_code)>0:\n",
+    "                sub_val = LCC_SCIMAGO_MAP[father_code]\n",
+    "                father_code = father_code[0:-1]\n",
+    "        \n",
+    "        MY_ISBN_SUBJECT_DICT[isbn] = sub_val\n",
+    "        CSV_READY_ISBN_SUBJECTS.append({\"isbn\":\";\".join(isbn),\"lcc\":code,\"subject\":sub_val})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "UPDATED_COCI_SOURCES = []\n",
+    "\n",
+    "with open(coci_sources) as a_file:\n",
+    "    csv_reader = csv.reader(a_file, delimiter=',') \n",
+    "    #0. date\n",
+    "    #1. subject\n",
+    "    #2. area\n",
+    "    #3. source_title\n",
+    "    #4. source_id\n",
+    "    #5. notes\n",
+    "    #6. doi\n",
+    "\n",
+    "    #skip the header\n",
+    "    next(csv_reader, None)\n",
+    "    #iterate all the csv rows\n",
+    "    for row in csv_reader:\n",
+    "        updated_row = row\n",
+    "        k = tuple(row[4].replace(\"isbn:\",\"\").split(\"; \"))\n",
+    "        if k in MY_ISBN_SUBJECT_DICT:\n",
+    "            updated_row[1] = MY_ISBN_SUBJECT_DICT[k]\n",
+    "        dict_updated_row = dict()\n",
+    "        for i in range(0,len(row)):\n",
+    "            dict_updated_row[i] = row[i]\n",
+    "        UPDATED_COCI_SOURCES.append(dict_updated_row)\n",
+    "        \n",
+    "write_list(UPDATED_COCI_SOURCES, \"coci_sources_updated.csv\", header= False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2.2) All Citing Sources"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -302,24 +417,19 @@
     "    #5. notes\n",
     "    #6. doi\n",
     "\n",
-    "    #skip the header\n",
-    "    next(csv_reader, None)\n",
-    "    #iterate all the csv rows\n",
+    "    #iterate all the csv rows \n",
     "    for row in csv_reader:\n",
-    "        if len(norm_subject(row[1])) != 0:\n",
+    "        is_valid = len(norm_subject(row[1])) > 0\n",
+    "        if is_valid:\n",
     "            elem = {\n",
     "                \"year\" : int(norm_data(row[0])),\n",
     "                \"subject\" : norm_subject(row[1]),\n",
     "                \"area\" : norm_area(row[2]),\n",
-    "                \"source_title\" : norm_area(row[3]),\n",
-    "                \"source_id\" : norm_area(row[4]),\n",
-    "                \"doi\" : norm_source_dois(row[6])\n",
+    "                \"source_title\" : norm_title(row[3]),\n",
+    "                \"source_id\" : norm_source_id(row[4]),\n",
+    "                \"doi\" : norm_dois(row[6])\n",
     "            }\n",
-    "            valid_sources.append(elem)\n",
-    "            \n",
-    "            is_valid = (len(elem[\"subject\"]) == len(elem[\"area\"]))\n",
-    "            if not is_valid:\n",
-    "                print(elem)"
+    "            valid_sources.append(elem)     "
    ]
   },
   {
@@ -331,7 +441,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 307,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -344,12 +454,12 @@
     "#Sources\n",
     "df_sources = pd.DataFrame.from_dict(valid_sources)\n",
     "df_sources[\"doi\"] = df_sources[\"doi\"].apply(lambda x: len(x))\n",
-    "df_sources = df_sources[(df_sources[\"year\"] >= 1998) & (df_sources[\"year\"] < 2005)]"
+    "df_sources = df_sources[(df_sources[\"year\"] >= 2011) & (df_sources[\"year\"] <= 2017)]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 335,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -393,136 +503,34 @@
     "        PATTERN[(cit_intent_val,cit_sentiment_val,item[\"retraction_mention\"])] += 1\n",
     "        \n",
     "        \n",
-    "# The Sources\n",
-    "SUBJECTS = defaultdict(set)\n",
-    "SUBJECTS_count = defaultdict(int)\n",
+    "# The Sources ISSN\n",
+    "SUBJECTS = defaultdict(dict)\n",
     "sub_area = list(zip(df_sources[\"subject\"], list(df_sources[\"area\"]), list(df_sources[\"doi\"])))\n",
     "for tupla in sub_area:\n",
-    "    for sub_index in range(0,len(tupla[0])):\n",
-    "        SUBJECTS[tupla[0][sub_index]].update(tupla[1][sub_index])\n",
-    "        SUBJECTS_count[tupla[0][sub_index]] += tupla[2]"
+    "    #in case of an ISBN\n",
+    "    if len(tupla[1]) == 0:\n",
+    "            if \"ISBN\" not in SUBJECTS[tupla[0][0]]:\n",
+    "                SUBJECTS[tupla[0][0]][\"ISBN\"] = 0\n",
+    "            SUBJECTS[tupla[0][0]][\"ISBN\"] += tupla[2]\n",
+    "    else:\n",
+    "        for sub_index in range(0,len(tupla[0])):\n",
+    "            for area in tupla[1][sub_index]:\n",
+    "                if area not in SUBJECTS[tupla[0][sub_index]]:\n",
+    "                    SUBJECTS[tupla[0][sub_index]][area] = 0\n",
+    "                SUBJECTS[tupla[0][sub_index]][area] += tupla[2]\n",
+    "\n",
+    "READY_TO_CSV = []\n",
+    "for k,v in SUBJECTS.items():\n",
+    "    for k_area in v:\n",
+    "        READY_TO_CSV.append({\"subject\":k,\"area\":k_area,\"count\":v[k_area]})\n",
+    "write_list(READY_TO_CSV, \"sources_test.csv\", header= False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 327,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "dict_keys(['arts and humanities', 'biochemistry, genetics and molecular biology', 'engineering', 'social sciences', 'medicine', 'psychology', 'immunology and microbiology', 'pharmacology, toxicology and pharmaceutics', 'neuroscience', 'computer science', 'earth and planetary sciences', 'dentistry', 'health professions', 'mathematics', 'nursing', 'agricultural and biological sciences'])"
-      ]
-     },
-     "execution_count": 327,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "SUBJECTS.keys()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 273,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "#Write sources on csv\n",
-    "all_sources = []\n",
-    "for k,v in SOURCES_BY_YEAR.items():\n",
-    "    for item in v: \n",
-    "        all_sources.append({\"year\": k, \"source_title\": item[0], \"source_id\": item[1]})\n",
-    "write_list(all_sources, \"coci_sources.csv\", header= False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 110,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "+ Total number of documents:  337\n",
-      "\n",
-      "+ Source: \n",
-      "      from the editor page: 225\n",
-      "      from other sources: 112\n",
-      "\n",
-      "+ Total number of in-text reference pointers:  442\n",
-      "\n",
-      "+ Average number of in-text reference pointers per document:  1.311572700296736\n",
-      "\n",
-      "+ Documents which mention the retraction:  128\n",
-      "\n",
-      "+ In-text reference pointers: \n",
-      "\n",
-      "      sentiment count:\n",
-      "       neutral  :  231\n",
-      "       negative  :  209\n",
-      "       positive  :  2\n",
-      "      -----\n",
-      "\n",
-      "      intent count:\n",
-      "       discusses  :  122\n",
-      "       cites for information  :  45\n",
-      "       cites as evidence  :  45\n",
-      "       qualifies  :  44\n",
-      "       credits  :  43\n",
-      "       disputes  :  41\n",
-      "       critiques  :  39\n",
-      "       obtains background from  :  34\n",
-      "       describes  :  23\n",
-      "       includes excerpt from  :  4\n",
-      "       uses data from  :  1\n",
-      "       refutes  :  1\n",
-      "      -----\n",
-      "\n",
-      "      common patters (intent, sentiment, mentions retraction):\n",
-      "       ('discusses', 'negative', 'yes')  :  38\n",
-      "       ('discusses', 'neutral', 'yes')  :  36\n",
-      "       ('discusses', 'negative', 'no')  :  26\n",
-      "       ('cites for information', 'neutral', 'no')  :  23\n",
-      "       ('critiques', 'negative', 'no')  :  23\n",
-      "       ('obtains background from', 'neutral', 'yes')  :  22\n",
-      "       ('discusses', 'neutral', 'no')  :  20\n",
-      "       ('cites as evidence', 'negative', 'no')  :  20\n",
-      "       ('credits', 'neutral', 'no')  :  16\n",
-      "       ('critiques', 'negative', 'yes')  :  15\n",
-      "       ('credits', 'negative', 'no')  :  14\n",
-      "       ('disputes', 'neutral', 'no')  :  14\n",
-      "       ('qualifies', 'neutral', 'yes')  :  14\n",
-      "       ('describes', 'neutral', 'no')  :  12\n",
-      "       ('qualifies', 'negative', 'no')  :  12\n",
-      "       ('disputes', 'neutral', 'yes')  :  11\n",
-      "       ('cites for information', 'neutral', 'yes')  :  11\n",
-      "       ('cites as evidence', 'negative', 'yes')  :  10\n",
-      "       ('disputes', 'negative', 'no')  :  10\n",
-      "       ('qualifies', 'negative', 'yes')  :  10\n",
-      "       ('cites as evidence', 'neutral', 'no')  :  9\n",
-      "       ('credits', 'neutral', 'yes')  :  9\n",
-      "       ('qualifies', 'neutral', 'no')  :  8\n",
-      "       ('describes', 'neutral', 'yes')  :  8\n",
-      "       ('cites for information', 'negative', 'no')  :  7\n",
-      "       ('disputes', 'negative', 'yes')  :  6\n",
-      "       ('obtains background from', 'neutral', 'no')  :  6\n",
-      "       ('cites as evidence', 'neutral', 'yes')  :  6\n",
-      "       ('obtains background from', 'negative', 'yes')  :  6\n",
-      "       ('includes excerpt from', 'neutral', 'yes')  :  4\n",
-      "       ('cites for information', 'negative', 'yes')  :  4\n",
-      "       ('credits', 'negative', 'yes')  :  4\n",
-      "       ('discusses', 'positive', 'yes')  :  2\n",
-      "       ('describes', 'negative', 'no')  :  2\n",
-      "       ('critiques', 'neutral', 'no')  :  1\n",
-      "       ('describes', 'negative', 'yes')  :  1\n",
-      "       ('uses data from', 'neutral', 'no')  :  1\n",
-      "       ('refutes', 'negative', 'yes')  :  1\n"
-     ]
-    }
-   ],
    "source": [
     "print(\"+ Total number of documents: \",TOT_DOC)\n",
     "print(\"\\n+ Source: \")\n",
@@ -550,6 +558,13 @@
     "    print(\"      \",k,\" : \",PATTERN[k] )\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
