--- a/project/retraction_analysis/humanities_retractions/lcc_scimago_mapping.ipynb
+++ b/project/retraction_analysis/humanities_retractions/lcc_scimago_mapping.ipynb
@@ -99,249 +99,127 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 55,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>area</th>\n",
-       "      <th>category</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Agricultural and Biological Sciences</td>\n",
-       "      <td>Agronomy and Crop Science</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Agricultural and Biological Sciences</td>\n",
-       "      <td>Animal Science and Zoology</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Agricultural and Biological Sciences</td>\n",
-       "      <td>Aquatic Science</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Agricultural and Biological Sciences</td>\n",
-       "      <td>Ecology, Evolution, Behavior and Systematics</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Agricultural and Biological Sciences</td>\n",
-       "      <td>Food Science</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>279</th>\n",
-       "      <td>Social Sciences</td>\n",
-       "      <td>Transportation</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>280</th>\n",
-       "      <td>Social Sciences</td>\n",
-       "      <td>Urban Studies</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>281</th>\n",
-       "      <td>Veterinary</td>\n",
-       "      <td>Equine</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>282</th>\n",
-       "      <td>Veterinary</td>\n",
-       "      <td>Food Animals</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>283</th>\n",
-       "      <td>Veterinary</td>\n",
-       "      <td>Small Animals</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>284 rows × 2 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                     area  \\\n",
-       "0    Agricultural and Biological Sciences   \n",
-       "1    Agricultural and Biological Sciences   \n",
-       "2    Agricultural and Biological Sciences   \n",
-       "3    Agricultural and Biological Sciences   \n",
-       "4    Agricultural and Biological Sciences   \n",
-       "..                                    ...   \n",
-       "279                       Social Sciences   \n",
-       "280                       Social Sciences   \n",
-       "281                            Veterinary   \n",
-       "282                            Veterinary   \n",
-       "283                            Veterinary   \n",
-       "\n",
-       "                                         category  \n",
-       "0                       Agronomy and Crop Science  \n",
-       "1                      Animal Science and Zoology  \n",
-       "2                                 Aquatic Science  \n",
-       "3    Ecology, Evolution, Behavior and Systematics  \n",
-       "4                                    Food Science  \n",
-       "..                                            ...  \n",
-       "279                                Transportation  \n",
-       "280                                 Urban Studies  \n",
-       "281                                        Equine  \n",
-       "282                                  Food Animals  \n",
-       "283                                 Small Animals  \n",
-       "\n",
-       "[284 rows x 2 columns]"
-      ]
-     },
-     "execution_count": 53,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "scimago_lookup_df"
+    "df_all_cits = pd.read_csv('annotation/all_cits.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "area_dict = defaultdict(int)\n",
+    "for k, row in df_all_cits.iterrows():\n",
+    "    a = str(row[\"venue_area\"])\n",
+    "    for a_part in a.split(\";;\"):\n",
+    "        a_part = a_part.lower().strip()\n",
+    "        area_dict[a_part] += 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>lcc_code</th>\n",
-       "      <th>lcc_subject</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>A</td>\n",
-       "      <td>General Works</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>AC</td>\n",
-       "      <td>Collections. Series. Collected works</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>AE</td>\n",
-       "      <td>Encyclopedias</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>AG</td>\n",
-       "      <td>Dictionaries and other general reference works</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>AI</td>\n",
-       "      <td>Indexes</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>225</th>\n",
-       "      <td>VG</td>\n",
-       "      <td>Minor services of navies</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>226</th>\n",
-       "      <td>VK</td>\n",
-       "      <td>Navigation. Merchant marine</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>227</th>\n",
-       "      <td>VM</td>\n",
-       "      <td>Naval architecture. Shipbuilding. Marine engin...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>228</th>\n",
-       "      <td>Z</td>\n",
-       "      <td>Bibliography, Library Science</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>229</th>\n",
-       "      <td>ZA</td>\n",
-       "      <td>Information resources/materials</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>230 rows × 2 columns</p>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "    lcc_code                                        lcc_subject\n",
-       "0          A                                      General Works\n",
-       "1         AC               Collections. Series. Collected works\n",
-       "2         AE                                      Encyclopedias\n",
-       "3         AG     Dictionaries and other general reference works\n",
-       "4         AI                                            Indexes\n",
-       "..       ...                                                ...\n",
-       "225       VG                           Minor services of navies\n",
-       "226       VK                        Navigation. Merchant marine\n",
-       "227       VM  Naval architecture. Shipbuilding. Marine engin...\n",
-       "228        Z                      Bibliography, Library Science\n",
-       "229       ZA                    Information resources/materials\n",
-       "\n",
-       "[230 rows x 2 columns]"
+       "defaultdict(int,\n",
+       "            {'arts and humanities': 161,\n",
+       "             'medicine': 259,\n",
+       "             'social sciences': 183,\n",
+       "             'psychology': 167,\n",
+       "             'nan': 113,\n",
+       "             'mathematics': 15,\n",
+       "             'engineering': 37,\n",
+       "             'nursing': 26,\n",
+       "             'biochemistry, genetics and molecular biology': 16,\n",
+       "             'computer science': 23,\n",
+       "             'business, management and accounting': 55,\n",
+       "             'multidisciplinary': 11,\n",
+       "             'chemical engineering': 5,\n",
+       "             'chemistry': 3,\n",
+       "             'energy': 14,\n",
+       "             'neuroscience': 24,\n",
+       "             'earth and planetary sciences': 36,\n",
+       "             'environmental science': 25,\n",
+       "             'economics, econometrics and finance': 22,\n",
+       "             '': 18,\n",
+       "             'geography, planning and development': 2,\n",
+       "             'pharmacology, toxicology and pharmaceutics': 6,\n",
+       "             'materials science': 8,\n",
+       "             'decision sciences': 4,\n",
+       "             'agricultural and biological sciences': 20,\n",
+       "             'physics and astronomy': 6,\n",
+       "             'health professions': 3,\n",
+       "             'veterinary': 4,\n",
+       "             'medicine\\nnursing': 1,\n",
+       "             'dentistry': 1,\n",
+       "             'geology': 1,\n",
+       "             'immunology and microbiology': 1})"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "lcc_lookup_df"
+    "area_dict"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "arts and humanities 161\n",
+      "medicine 259\n",
+      "social sciences 183\n",
+      "psychology 167\n",
+      "nan 113\n",
+      "mathematics 15\n",
+      "engineering 37\n",
+      "nursing 26\n",
+      "biochemistry, genetics and molecular biology 16\n",
+      "computer science 23\n",
+      "business, management and accounting 55\n",
+      "multidisciplinary 11\n",
+      "chemical engineering 5\n",
+      "chemistry 3\n",
+      "energy 14\n",
+      "neuroscience 24\n",
+      "earth and planetary sciences 36\n",
+      "environmental science 25\n",
+      "economics, econometrics and finance 22\n",
+      " 18\n",
+      "geography, planning and development 2\n",
+      "pharmacology, toxicology and pharmaceutics 6\n",
+      "materials science 8\n",
+      "decision sciences 4\n",
+      "agricultural and biological sciences 20\n",
+      "physics and astronomy 6\n",
+      "health professions 3\n",
+      "veterinary 4\n",
+      "medicine\n",
+      "nursing 1\n",
+      "dentistry 1\n",
+      "geology 1\n",
+      "immunology and microbiology 1\n"
+     ]
+    }
+   ],
+   "source": [
+    "for k, val in area_dict.items():\n",
+    "    print(k,val)"
    ]
   },
   {
